--- a/ppij_web_aplikacija/Web.config
+++ b/ppij_web_aplikacija/Web.config
@@ -14,14 +14,14 @@
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-    <modules>
+    <!--<modules>
       <remove name="FormsAuthentication" />
-    </modules>
+    </modules>-->
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
