--- a/ppij_web_aplikacija/Web.config
+++ b/ppij_web_aplikacija/Web.config
@@ -14,7 +14,9 @@
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
-    <authentication mode="Forms" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Login" timeout="2880"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
