--- a/ppij_web_aplikacija/ppij_web_aplikacija.csproj
+++ b/ppij_web_aplikacija/ppij_web_aplikacija.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\OsobaLogin.cs" />
+    <Compile Include="Models\RegistracijaModel.cs" />
     <Compile Include="Osoba.cs">
       <DependentUpon>ppij_entity_data_model.tt</DependentUpon>
     </Compile>
@@ -324,6 +325,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Login\Registracija.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
