--- a/ppij_web_aplikacija/ppij_web_aplikacija.csproj
+++ b/ppij_web_aplikacija/ppij_web_aplikacija.csproj
@@ -222,6 +222,12 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\InstrukcijaModel.cs" />
+    <Compile Include="Models\OpisInstrukcije.cs" />
+    <Compile Include="Models\OpisKategorije.cs" />
+    <Compile Include="Models\KategorijaModel.cs" />
+    <Compile Include="Models\OpisPredmeta.cs" />
+    <Compile Include="Models\PredmetModel.cs" />
     <Compile Include="Models\OsobaLogin.cs" />
     <Compile Include="Osoba.cs">
       <DependentUpon>ppij_entity_data_model.tt</DependentUpon>
@@ -341,7 +347,8 @@
     <Content Include="Views\Login\Registracija.cshtml" />
     <Content Include="Views\Profil\Index.cshtml" />
     <Content Include="Views\Profil\Postavke.cshtml" />
-    <Content Include="Views\Instrukcije\Index.cshtml" />
+    <Content Include="Views\Instrukcije\Kategorija.cshtml" />
+    <Content Include="Views\Instrukcije\Predmet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
