--- a/ppij_web_aplikacija/ppij_web_aplikacija.csproj
+++ b/ppij_web_aplikacija/ppij_web_aplikacija.csproj
@@ -222,12 +222,15 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Instrukcije\Konstante\Dan.cs" />
     <Compile Include="Models\Instrukcije\InstrukcijaModel.cs" />
-    <Compile Include="Models\Instrukcije\OpisInstrukcije.cs" />
-    <Compile Include="Models\Instrukcije\OpisKategorije.cs" />
+    <Compile Include="Models\Instrukcije\Konstante\Trajanje.cs" />
+    <Compile Include="Models\Instrukcije\Opisnici\OpisInstrukcije.cs" />
+    <Compile Include="Models\Instrukcije\Opisnici\OpisKategorije.cs" />
     <Compile Include="Models\Instrukcije\KategorijaModel.cs" />
-    <Compile Include="Models\Instrukcije\OpisPredmeta.cs" />
+    <Compile Include="Models\Instrukcije\Opisnici\OpisPredmeta.cs" />
     <Compile Include="Models\Instrukcije\PredmetModel.cs" />
+    <Compile Include="Models\Instrukcije\Konstante\Termin.cs" />
     <Compile Include="Models\Instrukcije\UstanovaModel.cs" />
     <Compile Include="Models\OsobaLogin.cs" />
     <Compile Include="Osoba.cs">
