Promijenjena baza: imena, prezimena, itd. promijenjena iz varchar u nvarchar da bi se mogla prikazivati hrvatska slova č, ć, itd.

--- a/ppij_web_aplikacija/Web.config
+++ b/ppij_web_aplikacija/Web.config
@@ -5,16 +5,15 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ppij_web_aplikacija-20160409045100.mdf;Initial Catalog=aspnet-ppij_web_aplikacija-20160409045100;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ppij_databaseEntities" connectionString="metadata=res://*/ppij_entity_data_model.csdl|res://*/ppij_entity_data_model.ssdl|res://*/ppij_entity_data_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ppij_database.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ppij_databaseEntities" connectionString="metadata=res://*/ppij_entity_data_model.csdl|res://*/ppij_entity_data_model.ssdl|res://*/ppij_entity_data_model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ppij_database.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <!--<add key="owin:AppStartup" value="ppij_web_aplikacija.IdentityConfig" />-->
-
   </appSettings>
   <system.web>
     <authentication mode="Forms">
