--- a/ppij_web_aplikacija/ppij_web_aplikacija.csproj
+++ b/ppij_web_aplikacija/ppij_web_aplikacija.csproj
@@ -281,6 +281,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\homepage.css" />
+    <Content Include="Content\Images\ajax_load.gif" />
     <Content Include="Content\Images\instrukcije1.jpg" />
     <Content Include="Content\Images\instrukcije2.jpg" />
     <Content Include="Content\Images\instrukcije3.jpg" />
